--- a/elestio.yml
+++ b/elestio.yml
@@ -2,7 +2,7 @@ ports:
   - protocol: "HTTPS"
     targetProtocol: "HTTPS"
     listeningPort: "443"
-    targetPort: "8000"
+    targetPort: "8001"
     targetIP: "172.17.0.1"
     public: true
     path: "/"
@@ -51,7 +51,7 @@ environments:
   - key: "TEMPORAL_HOST"
     value: "airbyte-temporal:7233"  
   - key: "INTERNAL_API_HOST"
-    value: "airbyte-server:8001"  
+    value: "server:8001"  
   - key: "WEBAPP_URL"
     value: "https://[CI_CD_DOMAIN]/" 
   - key: "API_URL"
@@ -81,7 +81,11 @@ environments:
   - key: "FORCE_MIGRATE_SECRET_STORE"
     value: "false"   
   - key: "USE_STREAM_CAPABLE_STATE"
-    value: "true"                       
+    value: "true" 
+  - key: "RUN_DATABASE_MIGRATION_ON_STARTUP"
+    value: "true" 
+  - key: "SECRET_PERSISTENCE"
+    value: "NONE"                          
 config:
   runTime: "dockerCompose"
   version: ""
