--- a/elestio.yml
+++ b/elestio.yml
@@ -94,7 +94,7 @@ config:
   buildDir: "/"
   runCommand: "docker-compose up -d"
   icon: ""
-  screenshot: ""
+  screenshot: "screenshot.jpg"
 lifeCycleConfig:
   preInstallCommand: "./scripts/preInstall.sh"
   postInstallCommand: "./scripts/postInstall.sh"
