--- a/elestio.yml
+++ b/elestio.yml
@@ -6,12 +6,10 @@ ports:
     targetIP: "172.17.0.1"
     public: true
     path: "/"
-    isAuth: true
-    login: "root"
-    password: "random_password"
+    isAuth: false
 environments:
   - key: "VERSION"
-    value: "0.40.33"
+    value: "0.42.0"
   - key: "ADMIN_PASSWORD"
     value: "random_password"
   - key: "CONFIG_ROOT"
@@ -35,62 +33,72 @@ environments:
   - key: "DATABASE_PORT"
     value: "5432"
   - key: "DATABASE_DB"
-    value: "airbyte"  
+    value: "airbyte"
   - key: "DATABASE_URL"
     value: "jdbc:postgresql://db:5432/airbyte"
   - key: "JOBS_DATABASE_MINIMUM_FLYWAY_MIGRATION_VERSION"
-    value: "0.29.15.001"
+    value: "0.40.26.001"
   - key: "CONFIG_DATABASE_USER"
-    value: ""  
+    value: ""
   - key: "CONFIG_DATABASE_PASSWORD"
-    value: ""  
+    value: ""
   - key: "CONFIG_DATABASE_URL"
-    value: ""  
+    value: ""
   - key: "CONFIGS_DATABASE_MINIMUM_FLYWAY_MIGRATION_VERSION"
-    value: "0.35.15.001"  
+    value: "0.40.23.002"
   - key: "TEMPORAL_HOST"
-    value: "temporal:7233"  
+    value: "airbyte-temporal:7233"
   - key: "INTERNAL_API_HOST"
-    value: "server:8001"  
+    value: "airbyte-server:8001"
   - key: "WEBAPP_URL"
-    value: "https://[CI_CD_DOMAIN]/" 
+    value: "https://[CI_CD_DOMAIN]/"
   - key: "API_URL"
-    value: "/api/v1/" 
+    value: "/api/v1/"
   - key: "SYNC_JOB_MAX_ATTEMPTS"
-    value: "3" 
+    value: "3"
   - key: "SYNC_JOB_MAX_TIMEOUT_DAYS"
-    value: "3" 
+    value: "3"
   - key: "TRACKING_STRATEGY"
-    value: "segment" 
+    value: "segment"
   - key: "JOB_ERROR_REPORTING_STRATEGY"
-    value: "logging" 
+    value: "logging"
   - key: "LOG_LEVEL"
-    value: "INFO"     
+    value: "INFO"
   - key: "MAX_SYNC_WORKERS"
-    value: "5"   
+    value: "5"
   - key: "MAX_SPEC_WORKERS"
-    value: "5"   
+    value: "5"
   - key: "MAX_CHECK_WORKERS"
-    value: "5"   
+    value: "5"
   - key: "MAX_DISCOVER_WORKERS"
-    value: "5"   
+    value: "5"
   - key: "AUTO_DISABLE_FAILING_CONNECTIONS"
-    value: "false"   
+    value: "false"
   - key: "EXPOSE_SECRETS_IN_EXPORT"
-    value: "false"   
+    value: "false"
   - key: "FORCE_MIGRATE_SECRET_STORE"
-    value: "false"   
+    value: "false"
   - key: "USE_STREAM_CAPABLE_STATE"
-    value: "true" 
+    value: "true"
   - key: "RUN_DATABASE_MIGRATION_ON_STARTUP"
-    value: "true" 
+    value: "true"
   - key: "SECRET_PERSISTENCE"
     value: "NONE"
   - key: "WORKERS_MICRONAUT_ENVIRONMENTS"
     value: "control-plane"
   - key: "CRON_MICRONAUT_ENVIRONMENTS"
     value: "control-plane"
-                        
+  - key: "CONNECTOR_BUILDER_API_HOST"
+    value: "airbyte-connector-builder-server:80"
+  - key: "CONNECTOR_BUILDER_API_URL"
+    value: "/connector-builder-api"
+  - key: "BASIC_AUTH_PROXY_TIMEOUT"
+    value: "600"
+  - key: "BASIC_AUTH_USERNAME"
+    value: "root"
+  - key: "BASIC_AUTH_PASSWORD"
+    value: "random_password"
+
 config:
   runTime: "dockerCompose"
   version: ""
@@ -107,3 +115,8 @@ lifeCycleConfig:
   postBackupCommand: "./scripts/postBackup.sh"
   preRestoreCommand: "./scripts/preRestore.sh"
   postRestoreCommand: "./scripts/postRestore.sh"
+webUI:
+  - url: "https://[CI_CD_DOMAIN]"
+    label: "Airbyte Web UI"
+    login: "root"
+    password: "[ADMIN_PASSWORD]"
