--- a/elestio.yml
+++ b/elestio.yml
@@ -8,7 +8,7 @@ ports:
     path: "/"
     isAuth: false
 environments:
-  - key: "VERSION"
+  - key: "SOFTWARE_VERSION_TAG"
     value: "0.42.0"
   - key: "ADMIN_PASSWORD"
     value: "random_password"
