--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,7 @@ services:
     environment:
       - AIRBYTE_ROLE=${AIRBYTE_ROLE:-}
       - AIRBYTE_VERSION=${SOFTWARE_VERSION_TAG}
+      - AUTO_DETECT_SCHEMA=${AUTO_DETECT_SCHEMA}
       - CONFIG_DATABASE_PASSWORD=${CONFIG_DATABASE_PASSWORD:-}
       - CONFIG_DATABASE_URL=${CONFIG_DATABASE_URL:-}
       - CONFIG_DATABASE_USER=${CONFIG_DATABASE_USER:-}
@@ -113,6 +114,7 @@ services:
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_URL=${DATABASE_URL}
       - DATABASE_USER=${DATABASE_USER}
+      - FEATURE_FLAG_CLIENT=${FEATURE_FLAG_CLIENT}
       - JOB_MAIN_CONTAINER_CPU_LIMIT=${JOB_MAIN_CONTAINER_CPU_LIMIT}
       - JOB_MAIN_CONTAINER_CPU_REQUEST=${JOB_MAIN_CONTAINER_CPU_REQUEST}
       - JOB_MAIN_CONTAINER_MEMORY_LIMIT=${JOB_MAIN_CONTAINER_MEMORY_LIMIT}
@@ -151,6 +153,7 @@ services:
       - TRACKING_STRATEGY=${TRACKING_STRATEGY}
       - CONNECTOR_BUILDER_API_HOST=${CONNECTOR_BUILDER_API_HOST}
       - CONNECTOR_BUILDER_API_URL=${CONNECTOR_BUILDER_API_URL:-}
+      - KEYCLOAK_INTERNAL_HOST=localhost
 
   airbyte-temporal:
     image: airbyte/temporal:${SOFTWARE_VERSION_TAG}
@@ -212,6 +215,19 @@ services:
     volumes:
       - ./workspace:${WORKSPACE_ROOT}
 
+  airbyte-api-server:
+    image: airbyte/airbyte-api-server:${SOFTWARE_VERSION_TAG}
+    restart: always
+    ports:
+      - "8006"
+    environment:
+      - AIRBYTE_VERSION=${SOFTWARE_VERSION_TAG}
+      - DEPLOYMENT_MODE=${DEPLOYMENT_MODE}
+      - INTERNAL_API_HOST=${INTERNAL_API_HOST}
+      - AIRBYTE_API_HOST=${AIRBYTE_API_HOST}
+    depends_on:
+      - bootloader
+
 volumes:
   workspace:
     name: ${WORKSPACE_DOCKER_MOUNT}
@@ -221,4 +237,4 @@ volumes:
   data:
     name: ${DATA_DOCKER_MOUNT}
   db:
-    name: ${DB_DOCKER_MOUNT}      
+    name: ${DB_DOCKER_MOUNT}
